--- a/GeometryDemo1/GeometryDemo1/GeometryDemo1.vcxproj.filters
+++ b/GeometryDemo1/GeometryDemo1/GeometryDemo1.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="Sumit.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Scenes.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Chaitanya.cpp">
@@ -87,6 +90,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Yash.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Scenes.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
