--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,27 @@
 
 /GeometryDemo1/.vs/GeometryDemo1
 /.vs/Test/v17
+/GeometryDemo1/x64/Debug
+/GeometryDemo1/GeometryDemo1/x64/Debug/GeometryDemo1.tlog
+/GeometryDemo1/GeometryDemo1/x64/Debug/Chaitanya.obj
+/GeometryDemo1/GeometryDemo1/x64/Debug/common.obj
+/GeometryDemo1/GeometryDemo1/x64/Debug/GeometryDemo1.Build.CppClean.log
+/GeometryDemo1/GeometryDemo1/x64/Debug/GeometryDemo1.exe.recipe
+/GeometryDemo1/GeometryDemo1/x64/Debug/GeometryDemo1.ilk
+/GeometryDemo1/GeometryDemo1/x64/Debug/GeometryDemo1.log
+/GeometryDemo1/GeometryDemo1/x64/Debug/Kapil.obj
+/GeometryDemo1/GeometryDemo1/x64/Debug/Madhuri.obj
+/GeometryDemo1/GeometryDemo1/x64/Debug/main.obj
+/GeometryDemo1/GeometryDemo1/x64/Debug/Manasi.obj
+/GeometryDemo1/GeometryDemo1/x64/Debug/Pankaj.obj
+/GeometryDemo1/GeometryDemo1/x64/Debug/Raviraj.obj
+/GeometryDemo1/GeometryDemo1/x64/Debug/Rishan.obj
+/GeometryDemo1/GeometryDemo1/x64/Debug/Scenes.obj
+/GeometryDemo1/GeometryDemo1/x64/Debug/Shreyash.obj
+/GeometryDemo1/GeometryDemo1/x64/Debug/Sumit.obj
+/GeometryDemo1/GeometryDemo1/x64/Debug/vc143.idb
+/GeometryDemo1/GeometryDemo1/x64/Debug/vc143.pdb
+/GeometryDemo1/GeometryDemo1/x64/Debug/Yash.obj
+/GeometryDemo1/GeometryDemo1/x64/Debug/GeometryDemo1.Build.CppClean.log
+/GeometryDemo1/GeometryDemo1/x64/Debug/GeometryDemo1.exe.recipe
+/GeometryDemo1/GeometryDemo1/x64/Debug/GeometryDemo1.log
