Hunter Going to jungle

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,6 @@
 /GeometryDemo1/GeometryDemo1/x64/Debug/GeometryDemo1.Build.CppClean.log
 /GeometryDemo1/GeometryDemo1/x64/Debug/GeometryDemo1.exe.recipe
 /GeometryDemo1/GeometryDemo1/x64/Debug/GeometryDemo1.log
+/.vs/RTR06-GeometryDemo/v17
+/GeometryDemo1/GeometryDemo1/x64/Debug
+/.vs
