--- a/GeometryDemo1/GeometryDemo1/GeometryDemo1.vcxproj.filters
+++ b/GeometryDemo1/GeometryDemo1/GeometryDemo1.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="Scenes.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Hunter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Chaitanya.cpp">
@@ -93,6 +96,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Scenes.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Hunter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
